lab10/zad5/my-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-backend-deployment
  labels:
    name: my-backend-deployment

spec:
  selector:
    matchLabels:
      name: my-backend-pod

  replicas: 2
  template: 
    metadata:
      labels:
        name: my-backend-pod 
        
    spec:
     containers:
     - name: my-backend
       image: ipustovoy/technologie-chmurowe:backend0

# ---

# apiVersion: v1 
# kind: Service
# metadata:
#   name: my-backend-service
# spec:
#   selector:
#     name: my-backend-pod
#   ports:
#   - port: 30020
#     targetPort: 5000
#     nodePort: 30020
#   type: NodePort
