lab10/zad5/my-react-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-react-deployment
  labels:
    name: my-react-deployment

spec:
  selector:
    matchLabels:
      name: my-react-pod

  replicas: 2
  template: 
    metadata:
      labels:
        name: my-react-pod 
        
    spec:
     containers:
     - name: my-react
       image: ipustovoy/technologie-chmurowe:frontend3
