lab10/zad5/my-backend-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: my-backend-service
spec:
  selector:
    name: my-backend-pod
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
