lab10/zad5/my-react-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: my-react-service
spec:
  selector:
    name: my-react-pod
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
